# vertexladder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo_performance.cpp  featurelist.md  high_speed_demo.bat  high_speed_demo.sh  untitled:plan-liveMarketData.prompt.md
build_debug/: CMakeCache.txt  MDSimulator  OrderBook  OrderBookPerformanceValidation  cmake_install.cmake
config/: orderbook.cfg
config/quickfix/: ctrader_fix.cfg  quickfix.cfg  quickfix_acceptor.cfg
docs/: cTrader_FIX_Documentation.md  symbols.csv  symbols.json
include/orderbook/: OrderBook.hpp
include/orderbook/Core/: Interfaces.hpp  MarketData.hpp  MatchingEngine.hpp  Order.hpp  OrderBook.hpp  OrderManager.hpp  Types.hpp
include/orderbook/MarketData/: IMarketDataConnector.hpp  MarketDataFeed.hpp  QuickFixConnector.hpp
include/orderbook/Network/: FixConstants.hpp  FixMessageHandler.hpp  FixParser.hpp  FixServer.hpp  FixSession.hpp  WsServer.hpp
include/orderbook/Risk/: RiskManager.hpp
include/orderbook/Utilities/: Config.hpp  ContiguousObjectPool.hpp  LockFreeQueue.hpp  Logger.hpp  MemoryAllocators.hpp  MemoryManager.hpp  ObjectPool.hpp  PerformanceMeasurement.hpp  PerformanceTest.hpp  PerformanceTimer.hpp
scripts/: extract_symbols.py  install-deps.sh
src/: main.cpp  performance_validation.cpp
src/Core/: MarketDataIntegrationTest.cpp  MatchingEngine.cpp  MatchingEngineTest.cpp  Order.cpp  OrderBook.cpp  OrderManager.cpp
src/MarketData/: MarketDataFeed.cpp
src/MarketData/Adapters/: QuickFixConnector.cpp
src/Network/: FixIntegrationExample.cpp  FixMessageHandler.cpp  FixParser.cpp  FixServer.cpp  FixSession.cpp  WsServer.cpp
src/Risk/: RiskManager.cpp
src/Utilities/: Config.cpp  Logger.cpp  PerformanceTest.cpp  PerformanceTimer.cpp
src/tests/: MDSimulator.cpp
